# phoneMcp

./: .gitignore  build.py  main.py  pyproject.toml  requirements.txt  start.sh
.catpaw/skills/release/: SKILL.md
.github/workflows/: build.yml
phone_mcp/: __init__.py  __main__.py  server.py
phone_mcp/adb/: __init__.py  connection.py  device.py  input.py  ocr.py  screenshot.py  ui_hierarchy.py
phone_mcp/config/: __init__.py  apps.py  timing.py
